fix: change opacity of Flash styling to solve contrast issue

--- a/client/src/components/Flash.css
+++ b/client/src/components/Flash.css
@@ -19,7 +19,7 @@
 
   color: black;
   background-color: #00ffdd;
-  opacity: 0.5;
+  opacity: 0.9;
   min-height: 42px;
 }
 
